--- a/index.html
+++ b/index.html
@@ -1,62 +1,306 @@
-<!-- Navbar (Add language switcher) -->
-<div class="navbar">
-  <h1>Sudarshan Gautam</h1>
-  <div class="hamburger" onclick="toggleMenu()"><div></div><div></div><div></div></div>
-  <div class="nav-links" id="navLinks">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#achievements">Achievements</a>
-    <a href="#skills">Skills</a>
-    <a href="#research">Research</a>
-    <a href="#workshops">Workshops</a>
-    <a href="#seminars">Seminars</a>
-    <a href="#shastrartha">Shastrartha/Vakyartha</a>
-    <a href="#publications">Publications</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#additional">Additional Info</a>
-    <a href="#contact">Contact</a>
-    <div style="margin-left:15px;">
-      <button onclick="switchLang('en')" class="lang-btn">English</button>
-      <button onclick="switchLang('sa')" class="lang-btn">संस्कृत</button>
-    </div>
-  </div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Sudarshan Gautam | Academic Profile</title>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<style>
+/* Base */
+* { margin:0; padding:0; box-sizing:border-box; font-family:'Roboto', sans-serif; }
+html { scroll-behavior: smooth; }
+body { background:#f0f2f5; color:#333; line-height:1.7; }
 
-<!-- Example Section with multilingual content -->
+/* Navigation */
+nav { position:sticky; top:0; background:linear-gradient(90deg,#ff6ec4,#7873f5); padding:15px 30px; display:flex; justify-content:center; flex-wrap:wrap; z-index:1000; box-shadow:0 4px 10px rgba(0,0,0,0.2); border-radius:0 0 15px 15px; }
+nav a { color:#fff; text-decoration:none; margin:5px 15px; font-weight:bold; transition:0.3s; }
+nav a:hover { color:#ffe600; transform:scale(1.1); }
+
+/* Header */
+header { height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center; text-align:center;
+background: linear-gradient(-45deg,#ff6ec4,#7873f5,#1fd1f9,#ffd700); background-size:400% 400%; animation: gradient 15s ease infinite; color:#fff; border-radius:0 0 20px 20px; }
+@keyframes gradient { 0%{background-position:0% 50%} 50%{background-position:100% 50%} 100%{background-position:0% 50%} }
+header h1 { font-size:3.5em; margin-bottom:15px; text-shadow:0 3px 10px rgba(0,0,0,0.4);}
+header p { font-size:1.5em; margin-bottom:15px; text-shadow:0 2px 8px rgba(0,0,0,0.3);}
+#datetime { font-size:1.2em; margin-bottom:15px; font-weight:bold; text-shadow:0 1px 5px rgba(0,0,0,0.3);}
+.btn { display:inline-block; padding:14px 35px; background:#fff; color:#ff6ec4; font-weight:bold; border-radius:30px; transition:0.3s; }
+.btn:hover { background:#ffe6f0; transform:translateY(-4px); }
+
+/* Sections */
+section { padding:60px 20px; max-width:1100px; margin:50px auto; border-radius:20px; box-shadow:0 10px 25px rgba(0,0,0,0.1); transition:0.5s; }
+section:hover { transform:translateY(-5px); box-shadow:0 15px 30px rgba(0,0,0,0.15); }
+section h2 { text-align:center; font-size:2em; margin-bottom:35px; color:#ff6ec4; text-shadow:0 1px 5px rgba(0,0,0,0.2); }
+section p, section li { font-size:1.15em; }
+ul { padding-left:20px; }
+
+/* About */
+.about { background:linear-gradient(120deg,#fef9f9,#ffe6f0); display:flex; flex-wrap:wrap; align-items:center; gap:30px; }
+.about img { width:250px; height:250px; border-radius:50%; object-fit:cover; flex-shrink:0; box-shadow:0 6px 20px rgba(0,0,0,0.2);}
+.about div p { margin-bottom:15px; }
+
+/* Achievements */
+.achievements { background:linear-gradient(120deg,#e0f7fa,#b2ebf2); }
+.achievements ul { list-style:none; padding-left:15px; }
+.achievements li { background:#ffffffaa; padding:18px; margin-bottom:15px; border-left:6px solid #00acc1; border-radius:12px; }
+.achievements li ul { margin-top:10px; border-left:2px dashed #00acc1; padding-left:15px; }
+
+/* Skills */
+.skills { background:linear-gradient(120deg,#fff9c4,#fff59d); }
+.skills ul { list-style:circle inside; }
+
+/* Research & Workshops */
+.list-section { background:#fff8e1; }
+.tabs { display:flex; justify-content:center; gap:15px; margin-bottom:25px; flex-wrap:wrap; }
+.tablinks { padding:10px 25px; cursor:pointer; background:#ff6ec4; color:#fff; border:none; border-radius:30px; font-weight:bold; transition:0.3s; }
+.tablinks:hover { background:#ffb3e6; }
+.tablinks.active { background:#7873f5; }
+
+/* Tab content */
+.tabcontent { display:none; animation:fadeIn 0.6s ease; }
+@keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
+.tabcontent ul li { background:#ffffffaa; padding:15px; margin-bottom:12px; border-radius:12px; transition:0.3s; }
+.tabcontent ul li:hover { transform:translateX(5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+
+/* Shastrartha / Vakyartha */
+.shastrartha { background:linear-gradient(120deg,#d1c4e9,#b39ddb); }
+.shastrartha ul li { background:#ffffffaa; padding:15px; margin-bottom:12px; border-radius:12px; }
+
+/* Gallery */
+.gallery { background:linear-gradient(120deg,#c8e6c9,#a5d6a7); }
+.gallery-grid { display:grid; grid-template-columns:repeat(auto-fit,minmax(250px,1fr)); gap:20px; }
+.gallery-grid img { width:100%; border-radius:15px; box-shadow:0 6px 15px rgba(0,0,0,0.2); transition:0.3s; }
+.gallery-grid img:hover { transform:scale(1.05); }
+
+/* Publications */
+.publications { background:linear-gradient(120deg,#ffe0b2,#ffcc80); }
+.publications ul { list-style:none; display:flex; flex-wrap:wrap; gap:20px; justify-content:center; }
+.publications li { background:#ffffffaa; padding:20px; border-radius:15px; flex:1 1 300px; transition:0.3s; }
+.publications li:hover { transform:translateY(-5px); box-shadow:0 10px 20px rgba(0,0,0,0.15); }
+.publications a { color:#ff6ec4; }
+
+/* Contact */
+.contact { background:linear-gradient(120deg,#f48fb1,#f06292); text-align:center; }
+.contact a { display:inline-block; margin:10px 15px; padding:12px 25px; background:#fff; color:#f06292; border-radius:30px; font-weight:bold; transition:0.3s; }
+.contact a:hover { background:#ffe6f0; transform:translateY(-3px); }
+
+/* Footer */
+footer { text-align:center; padding:40px 20px; background:#7873f5; color:#fff; font-size:1em; }
+
+/* Responsive */
+@media(max-width:768px){
+  .about { flex-direction:column; text-align:center; }
+  .about img { margin:0 0 20px 0; }
+  .gallery-grid { grid-template-columns:1fr; }
+}
+</style>
+</head>
+<body>
+
+<!-- Navigation -->
+<nav>
+<a href="#home">Home</a>
+<a href="#about">About Me</a>
+<a href="#achievements">Achievements</a>
+<a href="#skills">Skills</a>
+<a href="#research">Research & Projects</a>
+<a href="#workshops">Workshops</a>
+<a href="#seminars">Seminars</a>
+<a href="#shastrartha">Shastrartha/Vakyartha</a>
+<a href="#publications">Publications</a>
+<a href="#gallery">Gallery</a>
+<a href="#additional">Additional Info</a>
+<a href="#contact">Contact</a>
+</nav>
+
+<!-- Header -->
+<header id="home">
+<h1>Sudarshan Gautam</h1>
+<p>Researcher in Linguistics & Natural Language Processing</p>
+<p id="datetime"></p>
+<a href="CV.pdf" class="btn" target="_blank">Download CV</a>
+</header>
+
+<!-- About Me -->
 <section id="about" class="about">
-  <div class="lang-en">
-    <img src="yourphoto.jpg" alt="Sudarshan Gautam">
-    <div>
-      <h2>About Me</h2>
-      <p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.</p>
-      <p><strong>Education:</strong> PhD/MSc in Linguistics, University Name</p>
-      <p><strong>Research Interests:</strong> Paninian Grammar, Universal Semantic Representation, Multilingual NLP</p>
-      <p><strong>Professional Experience:</strong> Teaching, research, or professional positions.</p>
-    </div>
-  </div>
-  <div class="lang-sa" style="display:none;">
-    <img src="yourphoto.jpg" alt="Sudarshan Gautam">
-    <div>
-      <h2>मम विषये (About Me)</h2>
-      <p>सुदर्शन गौतमः भाषाविज्ञानम्, प्राकृतिक भाषाप्रक्रिया (NLP), बहुभाषिक कम्प्यूटेशनल प्रणालीषु विशेषं शोधकः।</p>
-      <p><strong>शिक्षा (Education):</strong> PhD/MSc भाषाविज्ञानम्, विश्वविद्यालयः</p>
-      <p><strong>अनुसन्धानरूचयः (Research Interests):</strong> पाणिनीयव्याकरणम् (Paninian Grammar), वैश्विकार्थप्रतिनिधित्वम् (Universal Semantic Representation), बहुभाषिक NLP</p>
-      <p><strong>व्यावसायिकानुभवः (Professional Experience):</strong> शिक्षणं, अनुसन्धानं वा अन्य पदानि।</p>
-    </div>
-  </div>
+<img src="randomphoto1.jpg" alt="Sudarshan Gautam">
+<div>
+<h2><span class="en">About Me</span> / <span class="sa">मेरे विषय में (About Me)</span></h2>
+<p>Hello! I am Sudarshan Gautam, a researcher specializing in Linguistics, NLP, and multilingual computational frameworks.
+<span class="sa">मैं सुदर्शन गौतम हूँ, भाषाविज्ञान (Linguistics), प्राकृतिक भाषा प्रसंस्करण (NLP), और बहुभाषी संगणकीय रूपरेखाओं (multilingual computational frameworks) में विशेषज्ञ शोधकर्ता।</span></p>
+<p><strong>Education:</strong> PhD/MSc in Linguistics, University Name
+<span class="sa">शिक्षा: भाषाविज्ञान में PhD/MSc, विश्वविद्यालय का नाम</span></p>
+<p><strong>Research Interests:</strong> Paninian Grammar (Pāṇinian Vyākaraṇa), Universal Semantic Representation (Vishvavyāpī Arthavyākhyāna), Multilingual NLP
+<span class="sa">अनुसंधान रुचियाँ: पाणिनीय व्याकरण (Paninian Grammar), वैश्विकार्थ प्रतिनिधित्व (Universal Semantic Representation), बहुभाषी NLP</span></p>
+<p><strong>Professional Experience:</strong> Teaching, research, or professional positions
+<span class="sa">पेशेवर अनुभव: शिक्षण, अनुसंधान या पेशेवर पद</span></p>
+</div>
 </section>
 
-<!-- JS for Language Switch -->
+<!-- Achievements -->
+<section id="achievements" class="achievements">
+<h2>Achievements / पुरस्कार (Awards)</h2>
+<ul>
+<li>UGC NET JRF Award (2022) / <span class="sa">UGC NET JRF पुरस्कार (2022)</span></li>
+<li>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021 / <span class="sa">आचार्य (M.A) – व्याकरण (Sanskrit Grammar) में स्वर्ण पदक, 2021</span>
+<ul>
+<li>Sampurnanand Sanskrit University Gold Medal / <span class="sa">सम्पूर्णानंद संस्कृत विश्वविद्यालय स्वर्ण पदक</span></li>
+<li>Pt. Brahmadatta Dwivedi Gold Medal / <span class="sa">पं. ब्रह्मदत्त द्विवेदी स्वर्ण पदक</span></li>
+<li>Shri Vimal Kumar Poddar Gold Medal / <span class="sa">श्री विमल कुमार पोद्दार स्वर्ण पदक</span></li>
+<li>Mahamandaleshwar Pavahari Swami Balakrishna Yati Ji Maharaj Gold Medal / <span class="sa">महामंडलेश्वर पवाहारी स्वामी बालकृष्ण यती जी महाराज स्वर्ण पदक</span></li>
+<li>Mahanta Rameshwar Puri Gold Medal / <span class="sa">महंत रमेश्वर पुरी स्वर्ण पदक</span></li>
+</ul>
+</li>
+<li>All India Shalaka Competition Gold Medals in Mīmāṁsā (2019 & 2022) / <span class="sa">ऑल इंडिया शालक प्रतियोगिता में मीमांसा स्वर्ण पदक (2019 & 2022)</span></li>
+<li>Actively participated and secured top positions in multiple Shastrartha (philosophical debates) and Vakyartha (interpretative discussions) / <span class="sa">अनेकों शास्त्रार्थ (philosophical debates) और वाक्यार्थ (interpretative discussions) में सक्रिय भागीदारी और शीर्ष स्थान</span></li>
+</ul>
+</section>
+
+<!-- Skills -->
+<section id="skills" class="skills">
+<h2>Skills & Expertise / कौशल और विशेषज्ञता</h2>
+<ul>
+<li>Paninian Grammar (पाणिनीय व्याकरण)</li>
+<li>Semantics (अर्थशास्त्र / Semantics)</li>
+<li>Syntax (वाक्य संरचना / Syntax)</li>
+<li>Nyāya Darśana (Indian Logic / न्याय दर्शन)</li>
+<li>Mīmāṁsā Darśana (Vedic Interpretation / मीमांसा दर्शन)</li>
+<li>Śrauta Yajña (Vedic Rituals / श्रौत यज्ञ)</li>
+<li>Indian Knowledge Tradition / भारतीय ज्ञान परंपरा</li>
+</ul>
+</section>
+
+<!-- Research & Projects -->
+<section id="research" class="list-section">
+<h2>Research & Projects / अनुसंधान एवं परियोजनाएँ</h2>
+<ul>
+<li>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – 2-month project internship under the Indian Knowledge System, Government of India (2022) / <span class="sa">"कातिय-दर्शनपूर्णमासीयाध्वर्यव-प्रयोगः" – भारतीय ज्ञान प्रणाली, भारत सरकार के अंतर्गत 2 महीने की परियोजना इंटर्नशिप (2022)</span></li>
+</ul>
+</section>
+
+<!-- Workshops & Training -->
+<section id="workshops" class="list-section">
+<h2>Workshops & Training / कार्यशालाएँ और प्रशिक्षण</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'WInternational')">International</button>
+<button class="tablinks" onclick="openTab(event,'WNational')">National</button>
+</div>
+<div id="WInternational" class="tabcontent">
+<ul>
+<li>International Workshop on Sanskrit & Computational Linguistics – IIT Hyderabad (2024) / <span class="sa">अंतरराष्ट्रीय कार्यशाला संस्कृत एवं संगणकीय भाषाविज्ञान – आईआईटी हैदराबाद (2024)</span></li>
+</ul>
+</div>
+<div id="WNational" class="tabcontent">
+<ul>
+<li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – BHU, Varanasi (2024) / <span class="sa">राष्ट्रीय कार्यशाला "संस्कृत और कंप्यूटर विज्ञान के विभिन्न आयाम" – बनारस हिंदू विश्वविद्यालय (2024)</span></li>
+<li>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – IIIT Hyderabad (2024) / <span class="sa">मेंटर, समर स्कूल "संस्कृत ज्ञान आधारित संगणकीय भाषाविज्ञान में पीएचडी शोधकर्ताओं के लिए मार्गदर्शन" – आईआईटी हैदराबाद (2024)</span></li>
+</ul>
+</div>
+</section>
+
+<!-- Seminars -->
+<section id="seminars" class="list-section">
+<h2>Seminars / संगोष्ठियाँ</h2>
+<div class="tabs">
+<button class="tablinks" onclick="openTab(event,'SInternational')">International</button>
+<button class="tablinks" onclick="openTab(event,'SNational')">National</button>
+</div>
+<div id="SInternational" class="tabcontent">
+<ul>
+<li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – Paninian Grammar and Its Application, Central Sanskrit University (2023)
+<span class="sa">"श्रौत-यज्ञेषु पाणिनीयोपकारः" – पाणिनीय व्याकरण और उसका अनुप्रयोग, केंद्रीय संस्कृत विश्वविद्यालय (2023)</span></li>
+</ul>
+</div>
+<div id="SNational" class="tabcontent">
+<ul>
+<li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, BHU (2023)
+<span class="sa">"पाणिनीय समास-सिद्धांत-विमर्शः" – अखिल भारतीय पतंजलि संगोष्ठी, BHU (2023)</span></li>
+<li>International Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University, Varanasi (2019)
+<span class="sa">अंतरराष्ट्रीय सम्मेलन "आयुर्वेद, धनुर्वेद, अर्थशास्त्र, और शास्त्रवाक्यार्थ गुरुकुल शिक्षा में" – सम्पूर्णानंद संस्कृत विश्वविद्यालय, वाराणसी (2019)</span></li>
+</ul>
+</div>
+</section>
+
+<!-- Shastrartha / Vakyartha -->
+<section id="shastrartha" class="shastrartha">
+<h2>Shastrartha / Vakyartha / शास्त्रार्थ / वाक्यार्थ</h2>
+<ul>
+<li>Participated in philosophical debates & interpretative discussions nationally & internationally
+<span class="sa">अंतरराष्ट्रीय एवं राष्ट्रीय शास्त्रार्थ और वाक्यार्थ में भागीदारी</span></li>
+<li>Secured top positions in multiple Shastrartha (Philosophical debates) & Vakyartha (Interpretative discussions)
+<span class="sa">कई शास्त्रार्थ और वाक्यार्थ में शीर्ष स्थान प्राप्त किया</span></li>
+</ul>
+</section>
+
+<!-- Publications -->
+<section id="publications" class="publications">
+<h2>Publications / प्रकाशन</h2>
+<ul>
+<li>Title of Paper 1 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
+<li>Title of Paper 2 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
+<li>Title of Paper 3 – Journal/Conference, Year <a href="#">[PDF/DOI]</a></li>
+</ul>
+</section>
+
+<!-- Gallery -->
+<section id="gallery" class="gallery">
+<h2>Gallery / छायाचित्र</h2>
+<div class="gallery-grid">
+<img src="randomphoto2.jpg" alt="Event 1">
+<img src="randomphoto3.jpg" alt="Event 2">
+<img src="randomphoto4.jpg" alt="Event 3">
+</div>
+</section>
+
+<!-- Additional Information -->
+<section id="additional" class="list-section">
+<h2>Additional Information / अतिरिक्त जानकारी</h2>
+<p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Pāṇinian Grammar) under the classical Kashi tradition.
+<span class="sa">प्रारंभिक शिक्षा पारंपरिक गुरुकुल प्रणाली के माध्यम से पूरी हुई, उसके बाद पाणिनीय व्याकरण (Vyākaraṇa) में विशेष अध्ययन किया गया।</span></p>
+<p>Comprehensive training in Nyāya, Mīmāṁsa, Vedānta, and Vedic Śrauta Yajñas, both theoretical and practical applications.
+<span class="sa">न्याय, मीमांसा, वेदांत, और वैदिक श्रौत यज्ञ में व्यापक प्रशिक्षण, सैद्धांतिक और व्यवहारिक दोनों रूपों में।</span></p>
+</section>
+
+<!-- Contact -->
+<section id="contact" class="contact">
+<h2>Contact / संपर्क</h2>
+<a href="mailto:your-email@example.com">Email Me</a>
+<a href="https://orcid.org/" target="_blank">ORCID</a>
+<a href="https://scholar.google.com/" target="_blank">Google Scholar</a>
+<a href="https://www.linkedin.com/" target="_blank">LinkedIn</a>
+</section>
+
+<!-- Footer -->
+<footer>
+© 2025 Sudarshan Gautam. All Rights Reserved.
+</footer>
+
+<!-- JS for Tabs & DateTime -->
 <script>
-function switchLang(lang){
-  const enElems=document.querySelectorAll('.lang-en');
-  const saElems=document.querySelectorAll('.lang-sa');
-  if(lang==='en'){
-    enElems.forEach(e=>e.style.display='block');
-    saElems.forEach(e=>e.style.display='none');
-  } else{
-    enElems.forEach(e=>e.style.display='none');
-    saElems.forEach(e=>e.style.display='block');
-  }
+function openTab(evt, tabName) {
+  var i, tabcontent, tablinks;
+  tabcontent = document.getElementsByClassName("tabcontent");
+  for (i=0;i<tabcontent.length;i++){ tabcontent[i].style.display="none"; }
+  tablinks = document.getElementsByClassName("tablinks");
+  for (i=0;i<tablinks.length;i++){ tablinks[i].className = tablinks[i].className.replace(" active",""); }
+  document.getElementById(tabName).style.display="block";
+  evt.currentTarget.className += " active";
 }
+document.addEventListener("DOMContentLoaded", function(){ 
+  var firstTabs = document.getElementsByClassName("tablinks");
+  for(var i=0;i<firstTabs.length;i++){
+    if(i%2===0){firstTabs[i].click();}
+  }
+});
+
+// Live Date & Time
+function updateDateTime(){
+  const now = new Date();
+  const options = {weekday:'long', year:'numeric', month:'long', day:'numeric', hour:'2-digit', minute:'2-digit', second:'2-digit'};
+  document.getElementById('datetime').textContent = now.toLocaleDateString('en-US', options);
+}
+setInterval(updateDateTime,1000);
+updateDateTime();
 </script>
+
+</body>
+</html>
