--- a/index.html
+++ b/index.html
@@ -1,266 +1,242 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sudarshan Gautam - Portfolio</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dr. Sudarshan Gautam - Portfolio</title>
   <style>
-    body {margin:0;font-family:Arial, sans-serif;line-height:1.6;}
-    header {background:linear-gradient(135deg,#4facfe,#00f2fe);color:#fff;text-align:center;padding:60px 20px;}
-    header img {width:150px;height:150px;border-radius:50%;border:5px solid #fff;}
-    .navbar {position:sticky;top:0;background:#222;color:#fff;display:flex;align-items:center;justify-content:space-between;padding:10px 20px;z-index:1000;}
-    .navbar h1 {font-size:20px;}
-    .nav-links {display:flex;gap:15px;align-items:center;}
-    .nav-links a {color:#fff;text-decoration:none;font-size:15px;}
-    .lang-btn {background:#444;color:#fff;border:none;padding:5px 10px;margin-left:5px;cursor:pointer;border-radius:5px;}
-    .hamburger {display:none;flex-direction:column;cursor:pointer;}
-    .hamburger div {width:25px;height:3px;background:white;margin:4px 0;}
-    section {padding:50px 20px;}
-    section h2 {font-size:22px;margin-bottom:15px;color:#222;}
-    section p, section li {font-size:17px;color:#333;}
-    ul {list-style:square;padding-left:20px;}
-    .about, .skills, .research, .workshops, .seminars, .shastrartha, .publications, .gallery, .additional {background:#f9f9f9;margin:10px 0;border-radius:10px;box-shadow:0 2px 6px rgba(0,0,0,0.1);} 
-    .gallery img {width:180px;height:120px;margin:10px;border-radius:8px;object-fit:cover;}
-    footer {background:#222;color:#fff;text-align:center;padding:20px;}
+    /* Reset & Base */
+    * {margin:0; padding:0; box-sizing:border-box;}
+    body {font-family: 'Segoe UI', sans-serif; line-height:1.6; background:#fdfdfd; color:#222;}
+    h2 {font-size:1.8rem; margin-bottom:1rem; color:#fff; text-align:center;}
+    h3 {font-size:1.3rem; margin:0.5rem 0; color:#333;}
+    p {font-size:1.05rem; margin:0.5rem 0;}
+    ul {margin-left:1.5rem;}
+    li {margin:0.3rem 0;}
+
+    /* Navbar */
+    nav {background:#222; color:#fff; display:flex; justify-content:space-between; align-items:center; padding:0.7rem 1.2rem; position:sticky; top:0; z-index:1000;}
+    nav .logo {font-weight:bold; font-size:1.2rem;}
+    nav ul {display:flex; list-style:none;}
+    nav ul li {margin-left:1.2rem;}
+    nav ul li a {color:#fff; text-decoration:none; transition:0.3s;}
+    nav ul li a:hover {color:#ffdd57;}
+    .menu-toggle {display:none; flex-direction:column; cursor:pointer;}
+    .menu-toggle span {width:25px; height:3px; background:#fff; margin:4px; border-radius:2px;}
     @media(max-width:768px){
-      .nav-links {display:none;flex-direction:column;background:#333;position:absolute;top:50px;right:0;width:200px;padding:10px;}
-      .nav-links a {padding:10px 0;}
-      .hamburger {display:flex;}
+      nav ul {display:none; flex-direction:column; background:#333; width:100%; position:absolute; top:60px; left:0;}
+      nav ul.show {display:flex;}
+      .menu-toggle {display:flex;}
     }
+
+    /* Sections */
+    section {padding:3rem 1.5rem;}
+    section:nth-child(even){background:#f4f4f4;}
+    section:nth-child(odd){background:#e2e8f0;}
+    section p, section li {color:#111;}
+
+    /* Gallery */
+    .gallery {display:grid; grid-template-columns:repeat(auto-fit,minmax(200px,1fr)); gap:1rem;}
+    .gallery img {width:100%; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.2);}
+
+    /* Footer */
+    footer {text-align:center; padding:1rem; background:#222; color:#fff;}
+
+    /* Multilingual toggle */
+    .lang-toggle {position:fixed; bottom:20px; right:20px; background:#ff5722; color:#fff; padding:0.5rem 1rem; border:none; border-radius:5px; cursor:pointer;}
   </style>
 </head>
 <body>
-  <!-- Header -->
-  <header id="home">
-    <img src="yourphoto.jpg" alt="Sudarshan Gautam">
-    <h1>Sudarshan Gautam</h1>
-    <p>Researcher | Sanskrit Grammar | Linguistics | NLP</p>
-  </header>
 
   <!-- Navbar -->
-  <div class="navbar">
-    <h1>Portfolio</h1>
-    <div class="hamburger" onclick="toggleMenu()"><div></div><div></div><div></div></div>
-    <div class="nav-links" id="navLinks">
-      <a href="#about">About</a>
-      <a href="#achievements">Achievements</a>
-      <a href="#skills">Skills</a>
-      <a href="#research">Research</a>
-      <a href="#workshops">Workshops</a>
-      <a href="#seminars">Seminars</a>
-      <a href="#shastrartha">Shastrartha</a>
-      <a href="#publications">Publications</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#additional">Additional</a>
-      <a href="#contact">Contact</a>
-      <div>
-        <button onclick="switchLang('en')" class="lang-btn">English</button>
-        <button onclick="switchLang('sa')" class="lang-btn">संस्कृत</button>
-      </div>
+  <nav>
+    <div class="logo">Dr. Sudarshan Gautam</div>
+    <div class="menu-toggle" onclick="document.querySelector('nav ul').classList.toggle('show')">
+      <span></span><span></span><span></span>
     </div>
-  </div>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#awards">Awards</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#workshops">Workshops</a></li>
+      <li><a href="#mentorship">Mentorship</a></li>
+      <li><a href="#seminars">Seminars</a></li>
+      <li><a href="#lectures">Lectures</a></li>
+      <li><a href="#shastrartha">Śāstrārtha</a></li>
+      <li><a href="#publications">Publications</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#additional">Additional</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-  <!-- About Section -->
-  <section id="about" class="about">
-    <div class="lang-en">
-      <h2>About Me</h2>
-      <p>I am Sudarshan Gautam, a researcher specializing in Sanskrit Grammar, Linguistics, and Natural Language Processing (NLP). I have studied Vyakarana (Grammar) in the classical Kashi tradition and continue to explore intersections of Indian grammatical theories with modern computational models.</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>मम विषये (About Me)</h2>
-      <p>अहं सुदर्शन गौतमः, संस्कृतव्याकरणे, भाषाविज्ञाने, प्राकृतिकभाषाप्रक्रियायाम् (NLP) च विशेषं अनुसन्धानं करोमि। काश्यां पारम्परिकव्याकरणपद्धत्याः अन्तर्गतं व्याकरणम् अध्ययनं कृतवानस्मि।</p>
-    </div>
+  <!-- Home -->
+  <section id="home" style="text-align:center; color:#fff; background:linear-gradient(135deg,#3f51b5,#2196f3);">
+    <img src="https://via.placeholder.com/200" alt="Profile" style="border-radius:50%; margin-bottom:1rem;">
+    <h1>Dr. Sudarshan Gautam</h1>
+    <p>Scholar | Sanskritist | Researcher in Indian Knowledge Systems</p>
   </section>
 
-  <!-- Achievements Section -->
-  <section id="achievements" class="achievements">
-    <div class="lang-en">
-      <h2>Awards & Achievements</h2>
-      <ul>
-        <li>UGC NET JRF Award (2022)</li>
-        <li><strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
-          <ul>
-            <li>Sampurnanand Sanskrit University Gold Medal</li>
-            <li>Pt. Brahmadatta Dwivedi Gold Medal</li>
-            <li>Shri Vimal Kumar Poddar Gold Medal</li>
-            <li>Mahamandaleshwar Pavahari Swami Balakrishna Yati Ji Maharaj Gold Medal</li>
-            <li>Mahanta Rameshwar Puri Gold Medal</li>
-          </ul>
-        </li>
-        <li>All India Shalaka Competition Gold Medals in Mimamsa (2019 & 2022)</li>
-        <li>Actively participated and secured top positions in Shastrartha (philosophical debates) and Vakyartha (interpretative discussions).</li>
-      </ul>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>पुरस्काराः (Awards & Achievements)</h2>
-      <ul>
-        <li>UGC NET JRF पुरस्कारः (2022)</li>
-        <li><strong>आचार्ये (M.A) व्याकरणे सुवर्णपदकानि (2021)</strong>
-          <ul>
-            <li>सम्पूर्णानन्दसंस्कृतविश्वविद्यालयस्य सुवर्णपदकम्</li>
-            <li>पं. ब्रह्मदत्त द्विवेदी सुवर्णपदकम्</li>
-            <li>श्री विमलकुमार पोद्दार सुवर्णपदकम्</li>
-            <li>महामण्डलेश्वरः पावहारीस्वामी बालकृष्णयति महाराज सुवर्णपदकम्</li>
-            <li>महन्तः रमेश्वरपुरी सुवर्णपदकम्</li>
-          </ul>
-        </li>
-        <li>अखिलभारतीयशालाकापरीक्षायाम् मीमांसायाम् सुवर्णपदकानि (2019 & 2022)</li>
-        <li>शास्त्रार्थेषु, वाक्यार्थेषु च सक्रियं सहभागित्वं श्रेष्ठस्थानानि च प्राप्तानि।</li>
-      </ul>
-    </div>
+  <!-- About -->
+  <section id="about">
+    <h2>About Me</h2>
+    <p>I received my early education through the traditional Gurukul system, later pursuing specialized studies in <strong>Vyākaraṇa (Pāṇinian Grammar)</strong> under the classical Kashi tradition. I also underwent rigorous training in <strong>Nyāya Darśana (Indian Logic)</strong>, <strong>Mīmāṁsā Darśana (Vedic Interpretation)</strong>, <strong>Vedānta</strong>, and <strong>Śrauta Yajñas (Vedic Rituals)</strong>—both in theory and practice.</p>
+
+    <h3>Interests</h3>
+    <ul>
+      <li>Indian Knowledge Traditions</li>
+      <li>Sanskrit Computational Linguistics</li>
+      <li>Śāstrārtha (Philosophical Debates)</li>
+      <li>Interdisciplinary Research in Vyākaraṇa and AI</li>
+    </ul>
+  </section>
+
+  <!-- Awards -->
+  <section id="awards">
+    <h2>Awards & Achievements</h2>
+    <ul>
+      <li>UGC NET JRF Award (2022)</li>
+      <li><strong>Gold Medals in Acharya (M.A) – Vyakarana (Sanskrit Grammar), 2021</strong>
+        <ul>
+          <li>Sampurnanand Sanskrit University Gold Medal</li>
+          <li>Pt. Brahmadatta Dwivedi Gold Medal</li>
+          <li>Shri Vimal Kumar Poddar Gold Medal</li>
+          <li>Mahamandaleshwar Pavahari Swami Balakrishna Yati Ji Maharaj Gold Medal</li>
+          <li>Mahanta Rameshwar Puri Gold Medal</li>
+        </ul>
+      </li>
+      <li>All India Shalaka Competition Gold Medals in Mīmāṁsā (2019 & 2022)</li>
+      <li>Active participation and top positions in Śāstrārtha (Philosophical Debates) and Vākyārtha (Interpretative Discussions)</li>
+    </ul>
   </section>
 
   <!-- Skills -->
-  <section id="skills" class="skills">
-    <div class="lang-en">
-      <h2>Skills</h2>
-      <ul>
-        <li>Sanskrit Grammar (Vyakarana)</li>
-        <li>Paninian Grammar Framework</li>
-        <li>Nyaya, Mimamsa, Vedanta</li>
-        <li>Natural Language Processing</li>
-      </ul>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>कौशलानि (Skills)</h2>
-      <ul>
-        <li>संस्कृतव्याकरणम्</li>
-        <li>पाणिनीयव्याकरणपद्धतिः</li>
-        <li>न्यायः, मीमांसा, वेदान्तः</li>
-        <li>प्राकृतिकभाषाप्रक्रिया (NLP)</li>
-      </ul>
-    </div>
+  <section id="skills">
+    <h2>Skills & Expertise</h2>
+    <ul>
+      <li>Paninian Grammar</li>
+      <li>Semantics</li>
+      <li>Syntax</li>
+      <li>Nyāya Darśana (Indian Logic)</li>
+      <li>Mīmāṁsā Darśana (Vedic Interpretation)</li>
+      <li>Śrauta Yajña (Vedic Rituals)</li>
+      <li>Indian Knowledge Tradition</li>
+    </ul>
   </section>
 
-  <!-- Research -->
-  <section id="research" class="research">
-    <div class="lang-en">
-      <h2>Research Interests</h2>
-      <p>Paninian Grammar, Universal Semantic Representation, Multilingual NLP frameworks, and integration of traditional Indian linguistic theories into computational linguistics.</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>अनुसन्धानरूचयः (Research Interests)</h2>
-      <p>पाणिनीयव्याकरणम्, वैश्विकार्थप्रतिनिधित्वम् (USR), बहुभाषिक NLP प्रणाल्यः, पारम्परिकभारतीयभाषाशास्त्रीयसिद्धान्तानां संगणकीयभाषाविज्ञाने समाकलनम्।</p>
-    </div>
+  <!-- Projects -->
+  <section id="projects">
+    <h2>Research & Projects</h2>
+    <ul>
+      <li>"Kātiya-Darśapaurṇamāsīyādhvaryava-Prayogaḥ" – Internship under Indian Knowledge System, Government of India (2022)</li>
+    </ul>
   </section>
 
   <!-- Workshops -->
-  <section id="workshops" class="workshops">
-    <div class="lang-en">
-      <h2>Workshops</h2>
-      <h3>International</h3>
-      <ul><li>Presented research on compounding in Universal Semantic Representation at international forums.</li></ul>
-      <h3>National</h3>
-      <ul><li>Conducted Sanskrit grammar workshops across universities.</li></ul>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>कार्यशालाः (Workshops)</h2>
-      <h3>अन्तर्राष्ट्रीय (International)</h3>
-      <ul><li>वैश्विकार्थप्रतिनिधित्वे (USR) समासानां विषये अनुसन्धानं प्रस्तुतम्।</li></ul>
-      <h3>राष्ट्रीय (National)</h3>
-      <ul><li>संस्कृतव्याकरणस्य कार्यशालाः विश्वविद्यालयेषु आयोजिताः।</li></ul>
-    </div>
+  <section id="workshops">
+    <h2>Workshops & Training</h2>
+    <h3>National</h3>
+    <ul>
+      <li>National Workshop on "Various Dimensions of Sanskrit and Computer Science" – Vedic Science Centre, BHU (2024)</li>
+    </ul>
+    <h3>International</h3>
+    <ul>
+      <li>–</li>
+    </ul>
+  </section>
+
+  <!-- Mentorship -->
+  <section id="mentorship">
+    <h2>Mentorship</h2>
+    <ul>
+      <li>Mentor, Summer School on "Orienting Ph.D. Scholars for Research in Sanskrit Wisdom-based Computational Linguistics" – IIIT Hyderabad (2024)</li>
+    </ul>
   </section>
 
   <!-- Seminars -->
-  <section id="seminars" class="seminars">
-    <div class="lang-en">
-      <h2>Seminars</h2>
-      <p>Actively participated in academic seminars on Sanskrit Grammar, Indian Philosophy, and Computational Linguistics.</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>संगोष्ठ्यः (Seminars)</h2>
-      <p>संस्कृतव्याकरणे, भारतीयदर्शनशास्त्रे, संगणकीयभाषाविज्ञाने च संगोष्ठीषु सक्रियं सहभागित्वम्।</p>
-    </div>
+  <section id="seminars">
+    <h2>Seminars & Conferences</h2>
+    <h3>National</h3>
+    <ul>
+      <li>"Pāṇinīya-Samāsa-Siddhānta-Vimarśaḥ" – All India Patanjali Seminar, BHU (2023)</li>
+    </ul>
+    <h3>International</h3>
+    <ul>
+      <li>"Śrauta-Yajñeṣu Pāṇinīyopakāraḥ" – International Seminar, Central Sanskrit University, Prayagraj (2023)</li>
+      <li>Conference on "Āyurveda, Dhanurveda, Arthaśāstra, and Śāstravākyārtha in Gurukula Education" – Sampurnanand Sanskrit University (2019)</li>
+    </ul>
   </section>
 
-  <!-- Shastrartha -->
-  <section id="shastrartha" class="shastrartha">
-    <div class="lang-en">
-      <h2>Shastrartha / Vakyartha</h2>
-      <p>Participated and secured top positions in multiple traditional debates (Shastrartha) and interpretative discussions (Vakyartha).</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>शास्त्रार्थ / वाक्यार्थ</h2>
-      <p>अनेकशास्त्रार्थेषु वाक्यार्थेषु च सहभागित्वं कृत्वा श्रेष्ठस्थानानि प्राप्तानि।</p>
-    </div>
+  <!-- Lectures -->
+  <section id="lectures">
+    <h2>Lectures</h2>
+    <h3>National</h3>
+    <ul>
+      <li>–</li>
+    </ul>
+    <h3>International</h3>
+    <ul>
+      <li>–</li>
+    </ul>
+  </section>
+
+  <!-- Śāstrārtha -->
+  <section id="shastrartha">
+    <h2>Śāstrārtha / Vākyārtha</h2>
+    <p>Actively participated and secured top positions in multiple philosophical debates and interpretative discussions.</p>
   </section>
 
   <!-- Publications -->
-  <section id="publications" class="publications">
-    <div class="lang-en">
-      <h2>Publications</h2>
-      <p>Published research articles on Sanskrit Grammar and Computational Linguistics in reputed journals.</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>प्रकाशनानि (Publications)</h2>
-      <p>संस्कृतव्याकरणे संगणकीयभाषाविज्ञाने च अनुसन्धानलेखाः प्रतिष्ठितपत्रिकासु प्रकाशिताः।</p>
-    </div>
+  <section id="publications">
+    <h2>Publications</h2>
+    <p>Coming soon...</p>
   </section>
 
   <!-- Gallery -->
-  <section id="gallery" class="gallery">
-    <div class="lang-en">
-      <h2>Gallery</h2>
-      <img src="gallery1.jpg" alt="Gallery Image">
-      <img src="gallery2.jpg" alt="Gallery Image">
-      <img src="gallery3.jpg" alt="Gallery Image">
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>चित्रशाला (Gallery)</h2>
-      <img src="gallery1.jpg" alt="Gallery Image">
-      <img src="gallery2.jpg" alt="Gallery Image">
-      <img src="gallery3.jpg" alt="Gallery Image">
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <div class="gallery">
+      <img src="https://via.placeholder.com/400x250" alt="Gallery 1">
+      <img src="https://via.placeholder.com/400x250" alt="Gallery 2">
+      <img src="https://via.placeholder.com/400x250" alt="Gallery 3">
     </div>
   </section>
 
-  <!-- Additional Info -->
-  <section id="additional" class="additional">
-    <div class="lang-en">
-      <h2>Additional Information</h2>
-      <p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyakarana (Paninian Grammar) under the classical Kashi tradition.</p>
-      <p>Comprehensive training in Nyaya, Mimamsa, Vedanta, and Vedic Shrauta Yajnas, both theoretical and practical.</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>अतिरिक्तसूचना (Additional Info)</h2>
-      <p>प्रारम्भिकशिक्षा पारम्परिकगुरुकुलपद्धत्याः अन्तर्गतं सम्पन्ना। तदनन्तरं काश्यां पाणिनीयव्याकरणे विशेषाध्ययनम्।</p>
-      <p>न्यायः, मीमांसा, वेदान्तः, वैदिकश्रौतयज्ञानाम् सैद्धान्तिकव्यावहारिकं च प्रशिक्षणम्।</p>
-    </div>
+  <!-- Additional -->
+  <section id="additional">
+    <h2>Additional Information</h2>
+    <p>Early education was completed through the traditional Gurukul system, followed by specialised studies in Vyākaraṇa (Pāṇinian Grammar) under the classical Kashi tradition. Comprehensive training in Nyāya, Mīmāṁsa, Vedānta, and Vedic Śrauta Yajñas, both in theoretical and practical applications.</p>
   </section>
 
   <!-- Contact -->
-  <section id="contact" class="contact">
-    <div class="lang-en">
-      <h2>Contact</h2>
-      <p>Email: yourmail@example.com</p>
-    </div>
-    <div class="lang-sa" style="display:none;">
-      <h2>सम्पर्कः (Contact)</h2>
-      <p>ईमेलः: yourmail@example.com</p>
-    </div>
+  <section id="contact">
+    <h2>Contact</h2>
+    <p>Email: sudarshan@example.com</p>
   </section>
 
-  <!-- Footer -->
   <footer>
-    <p>© 2025 Sudarshan Gautam. All Rights Reserved.</p>
+    <p>© 2025 Dr. Sudarshan Gautam</p>
   </footer>
 
+  <!-- Multilingual toggle -->
+  <button class="lang-toggle" onclick="toggleLang()">संस्कृतम्</button>
+
   <script>
-    function toggleMenu(){
-      const nav=document.getElementById('navLinks');
-      nav.style.display=(nav.style.display==='flex')?'none':'flex';
-    }
-    function switchLang(lang){
-      const enElems=document.querySelectorAll('.lang-en');
-      const saElems=document.querySelectorAll('.lang-sa');
-      if(lang==='en'){
-        enElems.forEach(e=>e.style.display='block');
-        saElems.forEach(e=>e.style.display='none');
-      } else{
-        enElems.forEach(e=>e.style.display='none');
-        saElems.forEach(e=>e.style.display='block');
+    let currentLang = 'en';
+    function toggleLang(){
+      if(currentLang==='en'){
+        document.body.setAttribute('lang','sa');
+        document.querySelector('.lang-toggle').innerText='English';
+        currentLang='sa';
+      } else {
+        document.body.setAttribute('lang','en');
+        document.querySelector('.lang-toggle').innerText='संस्कृतम्';
+        currentLang='en';
       }
     }
   </script>
+
 </body>
 </html>
